resolves #4188; spacing on facility detail page

--- a/src/sass/facility-locator.scss
+++ b/src/sass/facility-locator.scss
@@ -32,6 +32,10 @@
      outline:none;
   }
 
+  .p1 {
+    padding: 1em 0;
+  }
+
   label {
     margin-top: 0;
   }
